[package]
name = "test_client"
version = "0.1.0"
edition = "2024"

[dependencies]
psm_common = { path = "../common" }
colog = "1.3.0"
color-eyre = "0.6.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive"] }
