[package]
name = "wintab32"
version = "0.0.3"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
psm_common = { path = "../common" }
bitflags = "2.9.4"
colog = "1.3.0"
color-eyre = "0.6.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
static_init = "1.0.4"
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging"] }
dirs = "6.0.0"
env_logger = "0.11.8"
